--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,4 @@ DB_HOST={type:string}
 DB_PORT={type:string}
 
 AUTH_SERVICE_PORT = {type:string}
-BLOG_SERVICE_PORT = {type:string}
+POST_SERVICE_PORT = {type:string}
