--- a/auth_service/Cargo.toml
+++ b/auth_service/Cargo.toml
@@ -12,7 +12,7 @@ diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] 
 env_logger = "0.10.0"
 lazy_static = "1.4"
 log = "0.4"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
