Add jwt auth in auth service

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,7 @@ AUTH_SERVICE_PORT = {type:string}
 POST_SERVICE_PORT = {type:string}
 
 RUST_LOG = {type:string}
+
+JWT_SECRET= {type:string}
+JWT_EXPIRED_IN= {type:string}
+JWT_MAXAGE= {type:string}
