--- a/post_service/Cargo.toml
+++ b/post_service/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.10.0"
 lazy_static = "1.4"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+jsonwebtoken = "8.2.0"
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
