--- a/.github/workflows/test_auth_service.yml
+++ b/.github/workflows/test_auth_service.yml
@@ -6,7 +6,7 @@ env:
   POSTGRES_DB: blog_service
   POSTGRES_USER: blog_user
   POSTGRES_PASSWORD: blog_password
-  DB_HOST: postgres
+  DB_HOST: 0.0.0.0
   DB_PORT: 5432
 
   AUTH_SERVICE_PORT: 8000
