--- a/auth_service/Cargo.toml
+++ b/auth_service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-rt = "2.8.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
 argon2 = "0.5.0"
