--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,14 @@
-POSTGRES_DB={type:string}
-POSTGRES_USER={type:string}
-POSTGRES_PASSWORD={type:string}
-DB_HOST={type:string}
-DB_PORT={type:string}
+POSTGRES_DB = {type:string}
+POSTGRES_USER = {type:string}
+POSTGRES_PASSWORD = {type:string}
+DB_HOST = {type:string}
+DB_PORT = {type:int}
 
-AUTH_SERVICE_PORT = {type:string}
-POST_SERVICE_PORT = {type:string}
+AUTH_SERVICE_PORT = {type:int}
+POST_SERVICE_PORT = {type:int}
 
 RUST_LOG = {type:string}
 
-JWT_SECRET= {type:string}
-JWT_EXPIRED_IN= {type:string}
-JWT_MAXAGE= {type:string}
+JWT_SECRET = {type:string}
+JWT_EXPIRED_IN = {type:string} # Example: 60m
+JWT_MAXAGE = {type:int}
