--- a/auth_service/Cargo.toml
+++ b/auth_service/Cargo.toml
@@ -20,3 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
+
+[dev-dependencies]
+dotenv = "0.15.0"
+random-string = "1.0.0"
