--- a/post_service/Cargo.toml
+++ b/post_service/Cargo.toml
@@ -18,3 +18,6 @@ jsonwebtoken = "8.2.0"
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
+
+[dev-dependencies]
+dotenv = "0.15.0"
